<resources>
    <string name="app_name">Diet_App</string>
    <string name="caloriesView">0Kcal</string>
    <string name="confirmButton">확인</string>
    <string name="viewTotalButton">오늘 먹은 칼로리 확인</string>
    <string name="costView">123</string>
    <string name="locationEdit">학식 장소 선택</string>
    <string name="location1">상록원 2층</string>
    <string name="location2">상록원 3층</string>
    <string name="location3">기숙사 식당</string>
    <string name="imageEdit">이미지 선택</string>
    <string name="foodNameEdit">음식 이름 입력</string>
    <string name="calorieEdit">칼로리 입력</string>
    <string name="reviewEdit">음식 리뷰 입력</string>
    <string name="timeEdit">식사 시간 입력</string>
    <string name="costEdit">식사 비용 입력</string>
    <string name="button_calendar">월간 식사</string>
    <string name="button_home">처음으로</string>
    <string name="button_Analysis">월간 식사 분석</string>
    <string-array name="meal_options">
        <item>조식</item>
        <item>중식</item>
        <item>석식</item>
        <item>음료</item>
    </string-array>
    <string name="background">학생 식당 개인 사용 관리</string>
    <string name="button_start">Start</string>
    <string name="buttonSave">저장</string>
    <string name="textFood">음식 분류 선택</string>
    <string name="returnHome">홈으로 돌아가기</string>
</resources>