<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">

    <RadioGroup
        android:id="@+id/radioGroupLocation"
        android:layout_width="337dp"
        android:layout_height="55dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="515dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="@+id/editTextDateTime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:text="@string/location3" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="6dp"
        android:text="@string/locationEdit"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupLocation"
        app:layout_constraintStart_toStartOf="@+id/radioGroupLocation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonSelectImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="29dp"
        android:text="@string/imageEdit"
        app:layout_constraintBottom_toTopOf="@+id/editTextFoodName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupLocation" />

    <EditText
        android:id="@+id/editTextFoodName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/foodNameEdit"
        app:layout_constraintBottom_toTopOf="@+id/editTextSideDish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectImage" />

    <EditText
        android:id="@+id/editTextSideDish"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/sideDishEdit"
        app:layout_constraintBottom_toTopOf="@+id/editTextReview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFoodName" />

    <EditText
        android:id="@+id/editTextReview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/reviewEdit"
        app:layout_constraintBottom_toTopOf="@+id/editTextDateTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSideDish" />

    <EditText
        android:id="@+id/editTextDateTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/timeEdit"
        app:layout_constraintBottom_toTopOf="@+id/editTextCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextReview" />

    <EditText
        android:id="@+id/editTextCost"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="115dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/costEdit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDateTime" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="129dp"
        android:layout_height="0dp"
        android:layout_marginBottom="38dp"
        android:text="@string/confirmButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>